--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 theme: jekyll-theme-cayman
 lsi: false
 safe: true
-basePath: "/policies"
+baseurl: "/policies"
 source: /
 incremental: false
 highlighter: rouge
