--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,7 @@
 theme: jekyll-theme-cayman
 lsi: false
-baseurl: "/policies"
+baseurl: ""
+url: http://axelisys.github.io
 incremental: false
 gist:
   noscript: false
-kramdown:
-
