--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,8 @@ url: "https://axelisys.github.io"
 incremental: false
 gist:
   noscript: false
+defaults:
+  - scope:
+      path: ""
+    values:
+      layout: default
